; ModuleID = '/home/carl/AnghaBench/arduino-esp32/cores/esp32/extr_esp32-hal-cpu.c_initApbChangeCallback.c'
source_filename = "/home/carl/AnghaBench/arduino-esp32/cores/esp32/extr_esp32-hal-cpu.c_initApbChangeCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@initApbChangeCallback.initialized = internal global i32 0, align 4
@apb_change_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @initApbChangeCallback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @initApbChangeCallback() #0 {
  %1 = load volatile i32, i32* @initApbChangeCallback.initialized, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %9, label %3

3:                                                ; preds = %0
  store volatile i32 1, i32* @initApbChangeCallback.initialized, align 4
  %4 = call i32 (...) @xSemaphoreCreateMutex()
  store i32 %4, i32* @apb_change_lock, align 4
  %5 = load i32, i32* @apb_change_lock, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %3
  store volatile i32 0, i32* @initApbChangeCallback.initialized, align 4
  br label %8

8:                                                ; preds = %7, %3
  br label %9

9:                                                ; preds = %8, %0
  ret void
}

declare dso_local i32 @xSemaphoreCreateMutex(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
